--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "react-web-app",
+  "name": "undercover-onboarding",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "node-sass": "^4.13.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "^2.0.3"
   },
   "devDependencies": {
-    "react-scripts": "1.1.4"
+    "react-scripts": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
