--- a/package.json
+++ b/package.json
@@ -3,18 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^4.13.1",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "bootstrap": "^4.4.1",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.5.2",
     "react-scripts": "^2.0.3"
   },
   "devDependencies": {
-    "react-scripts": "^2.0.3"
+    "node-sass": "^4.13.1",
+    "react-scripts": "^2.0.3",
+    "sass-loader": "^8.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
