--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
-    "bootstrap": "^4.4.1",
-    "react": "^16.5.2",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.5.2",
-    "react-scripts": "^2.0.3"
+    "bootstrap": "^4.6.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "node-sass": "^4.13.1",
-    "react-scripts": "^2.0.3",
-    "sass-loader": "^8.0.2"
+    "node-sass": "^5.0.0",
+    "react-scripts": "3.3.0-next.38",
+    "sass-loader": "^11.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
