--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react-scripts": "^4.0.3",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
