--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "undercover-onboarding",
+  "name": "undercover-onboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-scripts": "^4.0.3",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
-    "react-dom": "^17.0.1"
-  },
-  "devDependencies": {
-    "node-sass": "^5.0.0",
-    "react-scripts": "^4.0.3",
-    "sass-loader": "^11.0.1"
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
